Flow type alignment issue fixed. Expand / collapse icon issue fixed.

--- a/styles.css
+++ b/styles.css
@@ -518,9 +518,9 @@ body.format-designer.editing ul.designer .section .circles-layout .activity .edi
     left: 0;
     z-index: -1;
 }
-.format-designer .course-content ul.designer.course-type-flow li.section.main .section-background-style.section-design-whole {
+/* .format-designer .course-content ul.designer.course-type-flow li.section.main .section-background-style.section-design-whole {
     z-index: 0;
-}
+} */
 .format-designer .course-content ul.designer li.section.main
 .section-background-style.section-design-whole .mask-inner-section,
 .format-designer .course-content ul.designer li.section .section-header-content
@@ -633,7 +633,7 @@ span.section-collapse-icon:before,
 span.section-collapse-icon:before {
     content: '\f107';
     width: 20px;
-    font-family: 'FontAwesome';
+    font-family: var(--fa-style-family,"Font Awesome 6 Free");
     font-size: 24px;
     font-weight: bold;
     line-height: 32px;
@@ -2948,7 +2948,7 @@ body.format-designer.editing .designer .section .content .section.card-layout li
     margin-top: 30px;
 }
 .format-designer .course-content ul.course-type-flow.designer .section.main .section-content-wrapper {
-    /* display: contents; */
+    display: contents;
     position: relative;
 }
 .format-designer .course-content ul.designer.course-type-flow li.section ul.section.img-text li.activity {
